--- a/tools/react-client/index.html
+++ b/tools/react-client/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
+<!doctype html>
+<html>
 
 <head>
   <meta charset="utf-8" />
-  <title>ESP SSE Client</title>
+  <title>ESP WebSocket Client</title>
 </head>
 
 <body>
-  <h3>ESP WiFi Client (SSE)</h3>
+  <h3>ESP WiFi Client (WebSocket)</h3>
   <div>
+    <input id="host" placeholder="ws://192.168.178.58:8765/" style="width:300px;" />
+    <button id="connect">Connect</button>
+  </div>
+  <div style="margin-top:8px">
     <input id="cmd" placeholder="Enter command (e.g. MEASURE)" style="width:300px;" />
     <button id="send">Send</button>
   </div>
